submission for WS1

--- a/tutorial/index.html
+++ b/tutorial/index.html
@@ -96,11 +96,25 @@ and then heavily modified -->
                       <img class="img-responsive" src="https://stiney98.files.wordpress.com/2011/05/cute-welsh-corgi-puppy-400x300.jpg?w=400" alt="">
                   </a>
               </div>
-
-              <!-- YOUR CODE HERE TO ADD MORE IMAGES OR TEXT TO THIS ROW -->
-          </div>
-
-          <!-- YOUR CODE HERE TO ADD MORE ROWS WITH MORE COLUMNS -->
+              <div class="col-lg-3 col-md-4 col-xs-6 thumb">
+                  <a class="thumbnail" href="#">
+                      <img class="img-responsive" src="https://stiney98.files.wordpress.com/2011/05/cute-welsh-corgi-puppy-400x300.jpg?w=400" alt="">
+                  </a>
+              </div>
+            </div>
+            <!-- second row of puppies -->
+            <div class="row">
+              <div class="col-lg-3 col-md-4 col-xs-6 thumb">
+                  <a class="thumbnail" href="#">
+                      <img class="img-responsive" src="https://stiney98.files.wordpress.com/2011/05/cute-welsh-corgi-puppy-400x300.jpg?w=400" alt="">
+                  </a>
+              </div>
+              <div class="col-lg-3 col-md-4 col-xs-6 thumb">
+                  <a class="thumbnail" href="#">
+                      <img class="img-responsive" src="https://stiney98.files.wordpress.com/2011/05/cute-welsh-corgi-puppy-400x300.jpg?w=400" alt="">
+                  </a>
+              </div>
+            </div>
         </div>
 
         <!-- YOUR CODE HERE IF YOU WANT TO MAKE A NEW GRID WITH A NEW CONTAINER
@@ -116,6 +130,9 @@ and then heavily modified -->
                   <br>
 
                   <!-- YOUR CODE HERE TO ADD IN BASIC BUTTONS -->
+                  <button type="button" class="btn btn-primary"> A Primary Button</button>
+                  <button type="button" class="btn btn-secondary btn-lg"> A Large Secondary Button</button>
+                  <button type="button" class="btn btn-warning" disabled> A Disabled Warning Button</button>
 
                 </div>
 
@@ -126,7 +143,7 @@ and then heavily modified -->
                 <div class="col-lg-12">
 
                   <!-- YOUR CODE HERE TO ADD IN BLOCK DANGER BUTTON -->
-
+                  <button type="button" class="btn btn-danger btn-block"> A Blocked Danger Button</button>
                 </div>
             </div>
             <br>
@@ -135,7 +152,11 @@ and then heavily modified -->
                 <div class="col-lg-12">
 
                   <!-- YOUR CODE HERE TO ADD IN BASIC BUTTON GROUP -->
-
+                  <div class="btn-group" role="group" aria-label="...">
+                    <button type="button" class="btn btn-default">Left</button>
+                    <button type="button" class="btn btn-default">Middle</button>
+                    <button type="button" class="btn btn-default">Right</button>
+                  </div>
                 </div>
             </div>
             <br>
@@ -144,10 +165,18 @@ and then heavily modified -->
                 <div class="col-lg-12">
 
                   <!-- YOUR CODE HERE TO ADD IN DROPDOWN BUTTON MENU -->
-
-            </div>
-
-        </div>
+                  <div class="btn-group" role="group">
+                    <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                      Dropdown
+                      <span class="caret"></span>
+                    </button>
+                    <ul class="dropdown-menu">
+                      <li><a href="#">Dropdown link</a></li>
+                      <li><a href="#">Dropdown link</a></li>
+                    </ul>
+                  </div>
+                </div>
+              </div>
     </section>
 
     <!-- Transitions Section -->
